# ChangeLog for dev-ruby/rails
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails/ChangeLog,v 1.213 2012/03/11 14:11:35 ranger Exp $

  11 Mar 2012; Brent Baude <ranger@gentoo.org> rails-3.1.3.ebuild:
  Marking rails-3.1.3 ~ppc64 for bug 396547

*rails-3.1.3-r1 (02 Jan 2012)

  02 Jan 2012; Hans de Graaff <graaff@gentoo.org> +rails-3.1.3-r1.ebuild,
  metadata.xml:
  Revision bump which also installs the components of the default Rails asset
  pipeline by default.

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> rails-3.1.3.ebuild:
  Add Prefix keywords, bug #396547

  31 Dec 2011; Hans de Graaff <graaff@gentoo.org> rails-3.1.3.ebuild:
  Add ruby19.

*rails-3.1.3 (30 Dec 2011)

  30 Dec 2011; Hans de Graaff <graaff@gentoo.org> +rails-3.1.3.ebuild:
  Version bump. Add ruby19. Drop arches due to bug 396547.

*rails-3.0.11 (19 Nov 2011)

  19 Nov 2011; Hans de Graaff <graaff@gentoo.org> +rails-3.0.11.ebuild:
  Version bump for Rails 3.0.11.

  05 Oct 2011; Hans de Graaff <graaff@gentoo.org> -rails-3.0.7.ebuild,
  -rails-3.0.9.ebuild:
  Remove old versions.

  28 Sep 2011; Hans de Graaff <graaff@gentoo.org> -rails-2.3.5.ebuild,
  -rails-2.3.11.ebuild, -rails-2.3.12.ebuild:
  Remove old versions.

*rails-3.0.10 (28 Sep 2011)

  28 Sep 2011; Hans de Graaff <graaff@gentoo.org> +rails-3.0.10.ebuild:
  Version bump for Rails 3.0.10

  09 Sep 2011; Fabian Groffen <grobian@gentoo.org> rails-3.0.9.ebuild:
  Marked ~sparc-solaris

  27 Aug 2011; Raúl Porcel <armin76@gentoo.org> rails-2.3.14.ebuild:
  ia64/sparc stable wrt #379511

  24 Aug 2011; Markus Meier <maekke@gentoo.org> rails-2.3.14.ebuild:
  x86 stable, bug #379511

  18 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> rails-2.3.14.ebuild:
  ppc64/ppc stable wrt #379511

  18 Aug 2011; Tony Vroon <chainsaw@gentoo.org> rails-2.3.14.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Saurbbo in