@@ -1,0 +1,50 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails/rails-3.0.12.ebuild,v 1.1 2012/04/04 09:59:57 graaff Exp $
+
+EAPI=2
+USE_RUBY="ruby18 ree18"
+
+RUBY_FAKEGEM_BINWRAP=""
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_TASK_TEST=""
+
+inherit ruby-fakegem
+
+DESCRIPTION="ruby on rails is a web-application and persistance framework"
+HOMEPAGE="http://www.rubyonrails.org"
+
+LICENSE="MIT"
+SLOT="3.0"
+KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
+
+IUSE=""
+
+RDEPEND=">=app-admin/eselect-rails-0.16"
+
+ruby_add_rdepend "
+	~dev-ruby/actionmailer-${PV}
+	~dev-ruby/actionpack-${PV}
+	~dev-ruby/activerecord-${PV}
+	~dev-ruby/activeresource-${PV}
+	~dev-ruby/activesupport-${PV}
+	=dev-ruby/bundler-1.0*
+	~dev-ruby/railties-${PV}"
+
+all_ruby_install() {
+	all_fakegem_install
+
+	ruby_fakegem_binwrapper rails rails-${PV}
+}
+
+pkg_postinst() {
+	elog "To select between slots of rails, use:"
+	elog "\teselect rails"
+
+	eselect rails update
+}
+
+pkg_postrm() {
+	eselect rails update
+}
