@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rails
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails/ChangeLog,v 1.213 2012/03/11 14:11:35 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rails/ChangeLog,v 1.214 2012/04/04 09:59:57 graaff Exp $
+
+*rails-3.0.12 (04 Apr 2012)
+
+  04 Apr 2012; Hans de Graaff <graaff@gentoo.org> +rails-3.0.12.ebuild:
+  Version bump for security bug 406547.
 
   11 Mar 2012; Brent Baude <ranger@gentoo.org> rails-3.1.3.ebuild:
   Marking rails-3.1.3 ~ppc64 for bug 396547
